--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,117 @@
-# Dependency directories
+# Jira Custom Field Consolidator .gitignore
+
+# Dependencies
+#--------------------------------------------------------------------
+# Backend Node modules
 node_modules/
+
+# Frontend Node modules
 static/main/node_modules/
 
+
 # Build output
+#--------------------------------------------------------------------
+# Frontend build directory (as defined in manifest.yml and build scripts)
 static/main/build/
 
-# Forge
-.forge/
-target/
+# Common build directories (just in case)
+dist/
+out/
 
-# Environment variables
-.env
 
-# Editor directories and files
-.idea/
-.vscode/
-*.swp
-*.swo
-
-# OS specific
-.DS_Store
-Thumbs.db
-
-# Debug logs
+# Logs
+#--------------------------------------------------------------------
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+
+# Runtime data
+#--------------------------------------------------------------------
+pids
+*.pid
+*.seed
+*.pid.lock
+package-lock.json
+
+
+# Test Coverage
+#--------------------------------------------------------------------
+coverage/
+*.lcov
+.nyc_output
+
+
+# Cache files
+#--------------------------------------------------------------------
+.eslintcache
+.stylelintcache
+.cache
+.parcel-cache
+
+
+# Environment variables
+#--------------------------------------------------------------------
+# Ignore all .env files by default
+.env*
+# But DO commit example/sample files
+!.env.example
+!.env.sample
+
+
+# OS generated files
+#--------------------------------------------------------------------
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Thumbnails
+Thumbs.db
+ehthumbs.db
+ehthumbs_vista.db
+
+# Folder config files
+.Spotlight-V100
+.Trashes
+
+# Windows
+# Windows thumbnail cache files
+._*
+
+# Files that might appear on external disks
+.DocumentRevisions-V100
+.fseventsd
+
+
+# Editor/IDE specific files
+#--------------------------------------------------------------------
+# VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# JetBrains IDEs (IntelliJ, WebStorm, etc.)
+.idea/
+
+# Sublime Text
+*.sublime-project
+*.sublime-workspace
+
+
+# Optional temporary files / directories
+#--------------------------------------------------------------------
+.temp/
+temp/
+
+
+# Packed files
+#--------------------------------------------------------------------
+*.tgz
